examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_inr_reconstruct.st
language core;

extend with #type-reconstruction, #sum-types;

fn main(input : Bool) -> Nat {
  return inr(0)
}


//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
